--- a/Week_01_Introduction.ipynb
+++ b/Week_01_Introduction.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "Uv-z3WWXjqmc",
         "outputId": "a144de8e-4dde-4b58-b998-82e0266dd184",
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "-xkVdzMnjqmd"
       },
@@ -118,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "frxOlBoQjqmd",
         "outputId": "78b9724a-7fc6-49ef-ff0b-20b710bd792a",
@@ -192,10 +192,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 67,
       "metadata": {
         "id": "N7Qf0-qkjqme",
-        "outputId": "b4e4d485-32b0-4d4f-fe11-053bad5855e4",
+        "outputId": "d540b808-11a2-45fa-e579-90dce63d6c0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -205,7 +205,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Your forked repository URL is: https://github.com/YOUR-GITHUB-USERNAME/NPSC2002-workshops\n",
+            "Your forked repository URL is: https://github.com/eliana-trenerry/NPSC2002-workshops\n",
             "\n",
             "Bookmark this URL - you'll use it all semester!\n"
           ]
@@ -213,7 +213,7 @@
       ],
       "source": [
         "# Replace this with YOUR GitHub username\n",
-        "my_github_username = \"YOUR-GITHUB-USERNAME\"\n",
+        "my_github_username = \"eliana-trenerry\"\n",
         "\n",
         "# Run this cell to see your repository URL\n",
         "my_repo_url = f\"https://github.com/{my_github_username}/NPSC2002-workshops\"\n",
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "i1n4e6yZjqmf",
         "outputId": "f54ee244-0179-4578-9c11-946e0d28ecaf",
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "tgvh5Znejqmf",
         "outputId": "455320f9-cddb-416a-e60e-db62a354261b",
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "D5cVEbGijqmf",
         "outputId": "7d17271d-61bf-44c8-87d7-975a7b9ef6e0",
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "PjexvP0bjqmf",
         "outputId": "1ddcf9ec-e821-4062-f0f4-f46ab1a95bdc",
@@ -481,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "_GS_NDh-jqmf",
         "outputId": "538cff4c-828d-45de-859f-b790159c4308",
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "Cdkd3kCvjqmf",
         "outputId": "de9f1a43-5a33-4437-8a7c-e23a727de45f",
@@ -684,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -739,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -859,7 +859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -921,7 +921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1019,7 +1019,7 @@
         "log_base_2 = math.log(8, 2)\n",
         "print(f\"Logarithm of 8 (base 2): {log_base_2:.4f}\")"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,10 +1108,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 68,
       "metadata": {
         "id": "ChxYuKL0jqmk",
-        "outputId": "d57639ce-5a6c-4a8b-b1fb-ca91b2159587",
+        "outputId": "09b5ea2d-68e9-4305-a094-997301585e08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1121,8 +1121,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "My GitHub username: YOUR-GITHUB-USERNAME\n",
-            "My repository: https://github.com/YOUR-GITHUB-USERNAME/NPSC2002-workshops\n",
+            "My GitHub username: eliana-trenerry\n",
+            "My repository: https://github.com/eliana-trenerry/NPSC2002-workshops\n",
             "\n",
             "✓ Make sure this is YOUR username, not 'YOUR-GITHUB-USERNAME'!\n"
           ]
@@ -1206,7 +1206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "Klm7RaZrjqml"
       },
